@@ -1,3 +1,9 @@
+2022-06-19 Danilo J. S. Bellini <danilo.bellini@gmail.com>
+
+        * Using gcc 11 since gcc 12 was resulting in SEGFAULT while linking.
+        * Add "provides" info.
+        * Fix shebangs to python3.2
+
 2022-01-22 Danilo J. S. Bellini <danilo.bellini@gmail.com>
 
         * Restored/recreated the package from AUR history.
